<resources>
    <string name="app_name">OurShoppingList</string>
    <string name="action_importexport">Import / Export</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_categories">Categories</string>
    <string name="action_shops">Shops</string>
    <string name="action_settings">Settings</string>
    <string name="action_license">License</string>
    <string name="action_about">About</string>
    <string name="about_msg">Developed by BCE Software:\n\nBaldana &amp; Curcó Enginering \n\nDevSecOps@calcurco.cat</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_shops">Shops</string>
</resources>