<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.calcurco.ourshoppinglist.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="10"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_importexport"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="10"
        android:title="Import / Export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_categories"
        android:orderInCategory="20"
        android:title="@string/action_categories"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shops"
        android:orderInCategory="20"
        android:title="@string/action_shops"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license"
        android:orderInCategory="200"
        android:title="@string/action_license"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="1000"
        app:showAsAction="never"/>
</menu>
